--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "canvas-confetti": "^1.9.2",
     "next": "14.1.4",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8",
