--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint"，
+    "deploy": "npx wrangler pages deploy .next"
   },
   "dependencies": {
     "canvas-confetti": "^1.9.2",
